Added Marta SPC NetSci
Added Marta SPC NetSci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-12T16:26:20Z</date>
+						<date>2018-12-12T17:20:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6976,6 +6976,16 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-01b6cb7.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								28a9qyUZUYuy
+								Z9wh4S00OA==
+								</data>
+								<key>Size</key>
+								<integer>199450</integer>
 							</dict>
 							<key>files/stacks-image-0a2e163-328x500.jpg</key>
 							<dict>
@@ -7127,6 +7137,16 @@
 								<key>Size</key>
 								<integer>54441</integer>
 							</dict>
+							<key>files/stacks-image-85b8eaa-500x500.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								8Z0xBVfVGb07
+								6RmqEwjufA==
+								</data>
+								<key>Size</key>
+								<integer>390378</integer>
+							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7247,6 +7267,16 @@
 								<key>Size</key>
 								<integer>146897</integer>
 							</dict>
+							<key>files/stacks-image-cfadf25.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9nBAHyaW6iKX
+								SMq0xWVuoA==
+								</data>
+								<key>Size</key>
+								<integer>25161</integer>
+							</dict>
 							<key>files/stacks-image-d2c4351-164x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7291,31 +7321,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EuD51ncllBMn
-								yyi5e2UEPQ==
+								yi3vB70k0nNE
+								rbrDlbnpBg==
 								</data>
 								<key>Size</key>
-								<integer>211461</integer>
+								<integer>219702</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								js81c+fR0Nps
-								19dHq0jYFA==
+								KDVJ2zuFvem9
+								EBy+WAP1tg==
 								</data>
 								<key>Size</key>
-								<integer>28573</integer>
+								<integer>29119</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8UsSJ+LRbT6t
-								4LmCYknY9Q==
+								6MeLEa2Ddq3z
+								vHYUqc1a9A==
 								</data>
 								<key>Size</key>
-								<integer>143051</integer>
+								<integer>152294</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7732,7 +7762,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-06T15:24:35Z</date>
+						<date>2018-12-12T17:20:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7756,6 +7786,16 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-01b6cb7.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								28a9qyUZUYuy
+								Z9wh4S00OA==
+								</data>
+								<key>Size</key>
+								<integer>199450</integer>
 							</dict>
 							<key>files/stacks-image-0a2e163-328x500.jpg</key>
 							<dict>
@@ -8061,31 +8101,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ec+6WmvoLpUt
-								oBj2mf1kzA==
+								YsIokxuap+kU
+								KamVsQU1xQ==
 								</data>
 								<key>Size</key>
-								<integer>203733</integer>
+								<integer>206480</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								NE2piDcj1fL9
-								/iPn0UyqKg==
+								VQCTNQNJ0Fv7
+								Lvh0vA7poQ==
 								</data>
 								<key>Size</key>
-								<integer>28937</integer>
+								<integer>29119</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ux86yYdE88CC
-								QrF7FaWLMw==
+								DCp9RaABx8lt
+								pP/p93xv1g==
 								</data>
 								<key>Size</key>
-								<integer>133415</integer>
+								<integer>136587</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11609,8 +11649,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDgtxdk
-				c8WAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDgvXsK
+				TWaAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -11620,7 +11660,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDgtxdke3CA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDgvXsKUECA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
