--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-12T16:26:20Z</date>
+						<date>2018-12-12T17:20:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -59,6 +59,16 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-01b6cb7.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								28a9qyUZUYuy
+								Z9wh4S00OA==
+								</data>
+								<key>Size</key>
+								<integer>199450</integer>
 							</dict>
 							<key>files/stacks-image-0a2e163-328x500.jpg</key>
 							<dict>
@@ -210,6 +220,16 @@
 								<key>Size</key>
 								<integer>54441</integer>
 							</dict>
+							<key>files/stacks-image-85b8eaa-500x500.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								8Z0xBVfVGb07
+								6RmqEwjufA==
+								</data>
+								<key>Size</key>
+								<integer>390378</integer>
+							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -330,6 +350,16 @@
 								<key>Size</key>
 								<integer>146897</integer>
 							</dict>
+							<key>files/stacks-image-cfadf25.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9nBAHyaW6iKX
+								SMq0xWVuoA==
+								</data>
+								<key>Size</key>
+								<integer>25161</integer>
+							</dict>
 							<key>files/stacks-image-d2c4351-164x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -374,31 +404,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EuD51ncllBMn
-								yyi5e2UEPQ==
+								yi3vB70k0nNE
+								rbrDlbnpBg==
 								</data>
 								<key>Size</key>
-								<integer>211461</integer>
+								<integer>219702</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								js81c+fR0Nps
-								19dHq0jYFA==
+								KDVJ2zuFvem9
+								EBy+WAP1tg==
 								</data>
 								<key>Size</key>
-								<integer>28573</integer>
+								<integer>29119</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8UsSJ+LRbT6t
-								4LmCYknY9Q==
+								6MeLEa2Ddq3z
+								vHYUqc1a9A==
 								</data>
 								<key>Size</key>
-								<integer>143051</integer>
+								<integer>152294</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
