--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-12T17:20:51Z</date>
+						<date>2018-12-19T14:40:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -89,6 +89,16 @@
 								</data>
 								<key>Size</key>
 								<integer>35091</integer>
+							</dict>
+							<key>files/stacks-image-127916a.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								3LgVp1RAakvu
+								6pxIT/gAjg==
+								</data>
+								<key>Size</key>
+								<integer>530208</integer>
 							</dict>
 							<key>files/stacks-image-1500267-332x498.jpg</key>
 							<dict>
@@ -370,6 +380,16 @@
 								<key>Size</key>
 								<integer>29271</integer>
 							</dict>
+							<key>files/stacks-image-eb41103.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								TtBSlYnCR35b
+								mXgxzoVV0g==
+								</data>
+								<key>Size</key>
+								<integer>511231</integer>
+							</dict>
 							<key>files/stacks-image-f14500c-500x500.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -404,11 +424,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								yi3vB70k0nNE
-								rbrDlbnpBg==
+								DGU1iX9Y1PYv
+								7jhHUarjCw==
 								</data>
 								<key>Size</key>
-								<integer>219702</integer>
+								<integer>220628</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -424,11 +444,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6MeLEa2Ddq3z
-								vHYUqc1a9A==
+								V2fKSTD3ZSKV
+								VWSyhKywZg==
 								</data>
 								<key>Size</key>
-								<integer>152294</integer>
+								<integer>153929</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
