--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-14T16:12:00Z</date>
+						<date>2018-12-19T15:27:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -462,11 +462,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EN/NiwQgcApk
-								IhdgYP8D6A==
+								BZSvJDJFknDj
+								nvFc+BVT2Q==
 								</data>
 								<key>Size</key>
-								<integer>142112</integer>
+								<integer>143326</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
