wesbite formatting mobile
wesbite formatting mobile

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6756,7 +6756,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6935,8 +6935,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mezWTXxImF1F
-								ibR9xdJFJQ==
+								jcFlrnKIzBoj
+								NTiGyhNxDw==
 								</data>
 								<key>Size</key>
 								<integer>88362</integer>
@@ -7738,7 +7738,7 @@
 					<key>page54 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-19T14:40:16Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7837,8 +7837,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Wk2DzWYQS++T
-								IetSUrMzmQ==
+								jpie6H5J3+Y3
+								NS7D3uwVkw==
 								</data>
 								<key>Size</key>
 								<integer>58132</integer>
@@ -7854,7 +7854,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-19T14:40:16Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7973,8 +7973,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zdeqhHoUR9UM
-								zvX9RgRZfQ==
+								VT3E+Wk/6xSw
+								JNv8oE1wBQ==
 								</data>
 								<key>Size</key>
 								<integer>66331</integer>
@@ -7990,7 +7990,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-12T16:26:20Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8059,8 +8059,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uq0wGRJL7M2r
-								+s8Ily6Udg==
+								0DJGyJvUbFnc
+								yDmKNm/4JQ==
 								</data>
 								<key>Size</key>
 								<integer>66886</integer>
@@ -8076,7 +8076,7 @@
 					<key>page57 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-02T21:30:12Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8555,8 +8555,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OC/5E2abAwtk
-								+gulWBZFDQ==
+								wO6HGfA+Z/bz
+								E6t7FhZZpQ==
 								</data>
 								<key>Size</key>
 								<integer>137138</integer>
@@ -8572,7 +8572,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-12T17:20:51Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8931,8 +8931,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DCp9RaABx8lt
-								pP/p93xv1g==
+								qTCDO8n5/5Z3
+								IVdeHwsPrA==
 								</data>
 								<key>Size</key>
 								<integer>136587</integer>
@@ -8948,7 +8948,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-06T17:52:24Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9137,8 +9137,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KXtcmvGL0fUT
-								KSdjYyNcZw==
+								LIgNlyjWD/fW
+								4DgywWxjFg==
 								</data>
 								<key>Size</key>
 								<integer>66439</integer>
@@ -9396,7 +9396,7 @@
 					<key>page61 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9465,8 +9465,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wLoYK9aNv/FT
-								2egxJLUTSw==
+								xNnaT1eBt3vn
+								W2fbd7WBsQ==
 								</data>
 								<key>Size</key>
 								<integer>50722</integer>
@@ -9482,7 +9482,7 @@
 					<key>page63 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-12T16:26:20Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9551,8 +9551,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pJx3sZqSCfjL
-								Iy82MzwLlQ==
+								TZI99kOwqGRz
+								6xCMS0kBMQ==
 								</data>
 								<key>Size</key>
 								<integer>50606</integer>
@@ -9568,7 +9568,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9637,8 +9637,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aeqPOZMsvwtK
-								mNYWMqlU6w==
+								U1xdU+ZAl5Dt
+								iFhxQyA5fw==
 								</data>
 								<key>Size</key>
 								<integer>47163</integer>
@@ -9654,7 +9654,7 @@
 					<key>page65 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9723,8 +9723,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4ihwDEtnHB1i
-								qJJEmpQ6Ag==
+								tiQkeZ7do6pD
+								UquNbZja/w==
 								</data>
 								<key>Size</key>
 								<integer>49584</integer>
@@ -9856,7 +9856,7 @@
 					<key>page67 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9925,8 +9925,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vjY0SatGhwEi
-								Lr0tPmWjfA==
+								Tm58FtCkaud0
+								L3lUhHAEgA==
 								</data>
 								<key>Size</key>
 								<integer>49718</integer>
@@ -10846,7 +10846,7 @@
 					<key>page73 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10915,8 +10915,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								s/W+Dj4H/DcV
-								uYe7gFPjVg==
+								OjK46FBJbia3
+								bkQXaIlxkA==
 								</data>
 								<key>Size</key>
 								<integer>49614</integer>
@@ -10932,7 +10932,7 @@
 					<key>page74 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11001,8 +11001,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ja1mrFtffKRr
-								6wuozFtgGw==
+								3whjzrqYSdOO
+								Ieshu42aOA==
 								</data>
 								<key>Size</key>
 								<integer>48529</integer>
@@ -12459,8 +12459,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDusnRK
-				l/qAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDv7L5b
+				ww2AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -12470,7 +12470,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDusnRKoRaA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDv7L5bxmWA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
