--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-19T14:40:16Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -154,8 +154,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zdeqhHoUR9UM
-								zvX9RgRZfQ==
+								VT3E+Wk/6xSw
+								JNv8oE1wBQ==
 								</data>
 								<key>Size</key>
 								<integer>66331</integer>
