--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -214,8 +214,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mezWTXxImF1F
-								ibR9xdJFJQ==
+								jcFlrnKIzBoj
+								NTiGyhNxDw==
 								</data>
 								<key>Size</key>
 								<integer>88362</integer>
