--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/5-Call-for-Fellows/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/5-Call-for-Fellows/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,8 +104,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4ihwDEtnHB1i
-								qJJEmpQ6Ag==
+								tiQkeZ7do6pD
+								UquNbZja/w==
 								</data>
 								<key>Size</key>
 								<integer>49584</integer>
