--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-02T21:30:12Z</date>
+						<date>2019-01-04T18:11:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -514,8 +514,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OC/5E2abAwtk
-								+gulWBZFDQ==
+								wO6HGfA+Z/bz
+								E6t7FhZZpQ==
 								</data>
 								<key>Size</key>
 								<integer>137138</integer>
