--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-02T21:30:12Z</date>
+						<date>2019-01-04T18:24:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7036,6 +7036,26 @@
 								</data>
 								<key>Size</key>
 								<integer>530208</integer>
+							</dict>
+							<key>files/stacks-image-13ba940-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GFmuIpFOOBIH
+								etd5uUV0Pw==
+								</data>
+								<key>Size</key>
+								<integer>30136</integer>
+							</dict>
+							<key>files/stacks-image-13ba940-350x375@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LVbyvasYrV91
+								Rc5zjmtsSw==
+								</data>
+								<key>Size</key>
+								<integer>52151</integer>
 							</dict>
 							<key>files/stacks-image-1500267-332x498.jpg</key>
 							<dict>
@@ -7176,26 +7196,6 @@
 								</data>
 								<key>Size</key>
 								<integer>33052</integer>
-							</dict>
-							<key>files/stacks-image-4dc41e1-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								WD5IVgZS54NO
-								awBGOUAJLw==
-								</data>
-								<key>Size</key>
-								<integer>32847</integer>
-							</dict>
-							<key>files/stacks-image-4dc41e1-350x375@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								U1zBzhtYgVi0
-								EVGUT8TkXg==
-								</data>
-								<key>Size</key>
-								<integer>47414</integer>
 							</dict>
 							<key>files/stacks-image-506ca91.png</key>
 							<dict>
@@ -7517,16 +7517,6 @@
 								<key>Size</key>
 								<integer>73694</integer>
 							</dict>
-							<key>files/stacks-image-af03d84-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								2RZbtegBnQcE
-								h5JgMI3QOw==
-								</data>
-								<key>Size</key>
-								<integer>52177</integer>
-							</dict>
 							<key>files/stacks-image-b379a6f-498x498.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7566,6 +7556,26 @@
 								</data>
 								<key>Size</key>
 								<integer>42733</integer>
+							</dict>
+							<key>files/stacks-image-ca23846-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GFmuIpFOOBIH
+								etd5uUV0Pw==
+								</data>
+								<key>Size</key>
+								<integer>30136</integer>
+							</dict>
+							<key>files/stacks-image-ca23846-350x375@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LVbyvasYrV91
+								Rc5zjmtsSw==
+								</data>
+								<key>Size</key>
+								<integer>52151</integer>
 							</dict>
 							<key>files/stacks-image-cd0a404.jpg</key>
 							<dict>
@@ -7721,11 +7731,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								byTDFMiXegZT
-								0vH8YWIK6Q==
+								yceP51YTtqrN
+								aRyWBwXulQ==
 								</data>
 								<key>Size</key>
-								<integer>239078</integer>
+								<integer>239176</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8076,7 +8086,7 @@
 					<key>page57 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-04T18:11:54Z</date>
+						<date>2019-01-04T18:24:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8221,26 +8231,6 @@
 								<key>Size</key>
 								<integer>33052</integer>
 							</dict>
-							<key>files/stacks-image-4dc41e1-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								WD5IVgZS54NO
-								awBGOUAJLw==
-								</data>
-								<key>Size</key>
-								<integer>32847</integer>
-							</dict>
-							<key>files/stacks-image-4dc41e1-350x375@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								U1zBzhtYgVi0
-								EVGUT8TkXg==
-								</data>
-								<key>Size</key>
-								<integer>47414</integer>
-							</dict>
 							<key>files/stacks-image-5433a01-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -8371,6 +8361,26 @@
 								<key>Size</key>
 								<integer>61533</integer>
 							</dict>
+							<key>files/stacks-image-7d4bd33-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GFmuIpFOOBIH
+								etd5uUV0Pw==
+								</data>
+								<key>Size</key>
+								<integer>30136</integer>
+							</dict>
+							<key>files/stacks-image-7d4bd33-350x375@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LVbyvasYrV91
+								Rc5zjmtsSw==
+								</data>
+								<key>Size</key>
+								<integer>52151</integer>
+							</dict>
 							<key>files/stacks-image-853176b-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -8441,16 +8451,6 @@
 								<key>Size</key>
 								<integer>61533</integer>
 							</dict>
-							<key>files/stacks-image-af03d84-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								2RZbtegBnQcE
-								h5JgMI3QOw==
-								</data>
-								<key>Size</key>
-								<integer>52177</integer>
-							</dict>
 							<key>files/stacks-image-bce74cf-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -8460,6 +8460,26 @@
 								</data>
 								<key>Size</key>
 								<integer>35003</integer>
+							</dict>
+							<key>files/stacks-image-bded2de-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GFmuIpFOOBIH
+								etd5uUV0Pw==
+								</data>
+								<key>Size</key>
+								<integer>30136</integer>
+							</dict>
+							<key>files/stacks-image-bded2de-350x375@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LVbyvasYrV91
+								Rc5zjmtsSw==
+								</data>
+								<key>Size</key>
+								<integer>52151</integer>
 							</dict>
 							<key>files/stacks-image-c132778-1200x800.jpg</key>
 							<dict>
@@ -8555,11 +8575,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wO6HGfA+Z/bz
-								E6t7FhZZpQ==
+								4u/ac4u6Njw2
+								us9kUtJHlQ==
 								</data>
 								<key>Size</key>
-								<integer>137138</integer>
+								<integer>137236</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12368,70 +12388,30 @@
 					<key>rw:theme:foundation - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:49:57Z</date>
+						<date>2019-01-04T18:24:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>consolidated-34.css</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								3SOyZPpYMqx2
-								34c6HgdeQQ==
-								</data>
-								<key>Size</key>
-								<integer>242066</integer>
-							</dict>
-							<key>consolidated-43.css</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								3SOyZPpYMqx2
-								34c6HgdeQQ==
-								</data>
-								<key>Size</key>
-								<integer>242066</integer>
-							</dict>
 							<key>consolidated.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3SOyZPpYMqx2
-								34c6HgdeQQ==
+								CKenQkhk2Q3B
+								ewhXsVeCJQ==
 								</data>
 								<key>Size</key>
-								<integer>242066</integer>
+								<integer>223633</integer>
 							</dict>
 							<key>foundation.min.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								9qY8i5WIVn+H
-								k8+txYIDeg==
+								+aBtdEI8K62S
+								2TLK2dSFRQ==
 								</data>
 								<key>Size</key>
-								<integer>134944</integer>
-							</dict>
-							<key>ie8.min.js</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								fQWPYERb4jlS
-								JRd45q9xBA==
-								</data>
-								<key>Size</key>
-								<integer>27444</integer>
-							</dict>
-							<key>ie8rem.min.js</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								DHhzOLR4+np4
-								mmq+1xouYA==
-								</data>
-								<key>Size</key>
-								<integer>2545</integer>
+								<integer>127756</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12459,8 +12439,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDv7L5b
-				ww2AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDv7inW
+				aS+AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -12470,7 +12450,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDv7L5bxmWA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDv7inWbuuA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
